wk - fix overlap

--- a/frontend/src/components/Invite/InviteMenu.css
+++ b/frontend/src/components/Invite/InviteMenu.css
@@ -7,8 +7,9 @@
     top: -7.5px;
 }
 
-.dropdown {
+.dropdown-open {
     position: absolute;
+    z-index: 999;
     width: 300px;
     height: 350px;
     border: 1px solid #ccc;
